<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Admin"
    android:background="#3C3E3F">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Admin"
        android:textColor="@color/color_3"
        android:textSize="20pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout150"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/backg_logo_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints">

        <Spinner
            android:id="@+id/sp_etudiants"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout150"
        app:layout_constraintVertical_bias="0.082">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backg_logo_4"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_module"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/color_4"
                android:gravity="center"
                android:padding="10dp"
                android:text="M1"
                android:textColor="#fff"
                android:textSize="14pt" />

            <TextView
                android:id="@+id/tv_titre_module"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/color_2"
                android:gravity="center"
                android:text="@string/m1"
                android:textColor="#fff"
                android:textSize="7pt" />

            <EditText
                android:id="@+id/ed_note_m1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/color_2"
                android:gravity="center"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:text="19.75"
                android:textColor="#fff"
                android:textSize="14pt" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/backg_logo_4"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/color_4"
                android:gravity="center"
                android:padding="10dp"
                android:text="M2"
                android:textColor="#fff"
                android:textSize="14pt" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/color_2"
                android:gravity="center"
                android:text="@string/m2"
                android:textColor="#fff"
                android:textSize="7pt" />

            <EditText
                android:id="@+id/ed_note_m2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/color_2"
                android:gravity="center"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:text="19.75"
                android:textColor="#fff"
                android:textSize="14pt" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backg_logo_4"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/color_4"
                android:gravity="center"
                android:padding="10dp"
                android:text="M3"
                android:textColor="#fff"
                android:textSize="14pt" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/color_2"
                android:gravity="center"
                android:text="@string/m3"
                android:textColor="#fff"
                android:textSize="7pt" />

            <EditText
                android:id="@+id/ed_note_m3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/color_2"
                android:gravity="center"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:text="19.75"
                android:textColor="#fff"
                android:textSize="14pt" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/backg_logo_4"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/color_4"
                android:gravity="center"
                android:padding="10dp"
                android:text="M4"
                android:textColor="#fff"
                android:textSize="14pt" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/color_2"
                android:gravity="center"
                android:text="@string/m4"
                android:textColor="#fff"
                android:textSize="7pt" />

            <EditText
                android:id="@+id/ed_note_m4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/color_2"
                android:gravity="center"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:text="19.75"
                android:textColor="#fff"
                android:textSize="14pt" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/backg_logo_4"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/color_4"
                android:gravity="center"
                android:padding="10dp"
                android:text="M5"
                android:textColor="#fff"
                android:textSize="14pt" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/color_2"
                android:gravity="center"
                android:text="@string/m5"
                android:textColor="#fff"
                android:textSize="7pt" />

            <EditText
                android:id="@+id/ed_note_m5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/color_2"
                android:gravity="center"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:text="19.75"
                android:textColor="#fff"
                android:textSize="14pt" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/backg_logo_4"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/color_4"
                android:gravity="center"
                android:padding="10dp"
                android:text="M6"
                android:textColor="#fff"
                android:textSize="14pt" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/color_2"
                android:gravity="center"
                android:text="@string/m6"
                android:textColor="#fff"
                android:textSize="7pt" />

            <EditText
                android:id="@+id/ed_note_m6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/color_2"
                android:gravity="center"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:text="19.75"
                android:textColor="#fff"
                android:textSize="14pt" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_modefier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/backg_logo_7"
            android:text="modifier"
            android:textColor="#fff"

            />

    </LinearLayout>









</android.support.constraint.ConstraintLayout>